2003-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: redundant return

2003-10-19  John Levon  <levon@movementarian.org>

	* libop/op_events.c: move to a fixed value for the default
	event count value

2003-10-19  Philippe Elie  <phil.el@wanadoo.fr>

	remove some FIXME:
	* libpp/format_output.h: remove first_output bool member
	* libpp/format_output.cpp: call output_header from the right place
	* libpp/op_header.h: remove bogus FIXME

	* libregex/tests/Makefile.am: fix dependencies on mangled-name file,
	  fix make dist
	* libregex/tests/mangled-name.in: simplify a bit and remove a bogus
	  FIXME
	* libregex/tests/regex_test.cpp: fix comment

	* module/ia64/op_syscalls.c:
	* module/x86/hammer_op_syscalls.c:
	* module/x86/op_syscalls.c: remove some FIXME

2003-10-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: clarify suggestion.
	* pp/opreport_options.cpp: update options help string for --merge.

	* libpp/profile_container.cpp:
	* libpp/profile_spec.cpp:
	* pp/common_option.cpp:
	* pp/populate.cpp: ';' are not necessary to end namespace

2003-10-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: use a set<profile_classes> instead
	  of a vector<...> to replace a O(N*M) by a O(N*log(M)) behavior.
	  (N number of samples files, M number of class).

2003-10-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: show filename when warning about no debug
	  information available. get_linenr(): s/filename/source_filename/

2003-10-16  Philippe Elie  <phil.el@wanadoo.fr>

	* events/ia64/itanium/events: counter 0,1 not 2,3 for IA64_INST_RETIRED

	* daemon/opd_util.c: opd_parse_events() fix use after free.

2003-10-16  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: disable the code

2003-10-15  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: fflushes to improve
	order of debug log

2003-10-15  John Levon  <levon@movementarian.org>
